druid36 jvmconfig updated