@@ -1,23 +1,20 @@
 -server
 -Xms{{ druid_configs[cluster].druid_historical_min_heap_size }}
 -Xmx{{ druid_configs[cluster].druid_historical_max_heap_size }}
+
 -XX:MaxDirectMemorySize={{ druid_configs[cluster].druid_historical_max_direct_size }}
+
 -XX:+UseG1GC
+
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
--XX:+PrintGCDetails
--XX:+PrintGCDateStamps
--XX:+PrintGCTimeStamps
--XX:+PrintGCApplicationStoppedTime
--XX:+PrintGCApplicationConcurrentTime
--Xloggc:{{ druid_historical_gc_logfile }}
+
+-Xlog:gc*:file={{ druid_historical_gc_logfile }}:time,uptime,level,tags:filecount=50,filesize=10m
+
 -XX:HeapDumpPath={{ druid_historical_heap_dump_file }}
--XX:+UseGCLogFileRotation
--XX:NumberOfGCLogFiles=50
--XX:GCLogFileSize=10m
+
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.io.tmpdir={{ druid_historical_tmp_dir }}
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
 -Dlog4j.configurationFile={{ druid_path }}conf/druid/{{ service }}/log4j2.xml
-
