@@ -1,10 +1,11 @@
 -server
 -Xms{{ druid_configs[cluster].druid_middlemanager_min_heap_size }}
 -Xmx{{ druid_configs[cluster].druid_middlemanager_max_heap_size }}
--XX:+PrintGCDetails
+
 -XX:+UseG1GC
--XX:+PrintGCTimeStamps
--Xloggc:{{ druid_middlemanager_gc_logfile }}
+
+-Xlog:gc*:file={{ druid_middlemanager_gc_logfile }}:time,uptime,level,tags
+
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
